# plasma6-simpleMonitor

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  README_zh-CN.md  build.sh  install.sh  launch.sh  uninstall.sh
.github/workflows/: build.yml
plasmoid/: metadata.json
plasmoid/contents/code/: data.sh
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: main.qml
plasmoid/contents/ui/components/: LogoImage.qml
plasmoid/contents/ui/config/: ConfigGeneral.qml  ConfigMisc.qml  ConfigSkins.qml
plasmoid/contents/ui/monitorWidgets/: AverageCPU.qml  CoreTempList.qml  CpuWidget.qml  DatePicker.qml  GpuTempList.qml  HighlightCpu.qml  MemArea.qml  OsInfoItem.qml  TimePicker.qml  UptimePicker.qml
plasmoid/contents/ui/skins/: BaseSkin.qml  ColumnSkin.qml  DefaultSkin.qml  MinimalisticSkin.qml
translations/: CMakeLists.txt  Messages.sh
translations/pl/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/ru/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/tr/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
translations/zh_CN/LC_MESSAGES/: plasma_applet_org.kde.simpleMonitor.mo  plasma_applet_org.kde.simpleMonitor.po
